--- a/FindersKeepers/app/src/main/res/menu/menu_home_page.xml
+++ b/FindersKeepers/app/src/main/res/menu/menu_home_page.xml
@@ -3,8 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="cse403.finderskeepers.HomePage">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_user_page"
+        android:orderInCategory="101"
+        android:id="@+id/action_user_page" />
+    <item
+        android:id="@+id/action_browse_items"
+        android:orderInCategory="200"
+        android:title="@string/action_browse_items"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_view_trades"
+        android:orderInCategory="201"
+        android:title="@string/action_view_trades" />
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="302"
+        android:title="@string/action_settings" />
 </menu>
