--- a/FindersKeepers/app/src/main/res/layout/content_home_page.xml
+++ b/FindersKeepers/app/src/main/res/layout/content_home_page.xml
@@ -29,7 +29,7 @@
         android:text="@string/user_name"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:id="@+id/user_name"
+        android:id="@+id/user_name_text"
         android:textSize="30sp"
         android:textColor="@color/bootstrap_brand_secondary_text"
         android:layout_gravity="center_horizontal"
