--- a/FindersKeepers/app/src/main/res/layout/content_user_settings.xml
+++ b/FindersKeepers/app/src/main/res/layout/content_user_settings.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:src="@mipmap/ic_launcher"
-        android:id="@+id/imageButton"
+        android:id="@+id/user_avatar"
         android:layout_gravity="center"
         android:layout_weight="2"/>
 
@@ -33,7 +33,7 @@
         android:text="Set Location to Current"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/action_set_location"
+        android:id="@+id/action_change_location"
         android:gravity="center"
         android:layout_weight="1" />
 
