--- a/FindersKeepers/app/src/main/res/layout/content_user_settings.xml
+++ b/FindersKeepers/app/src/main/res/layout/content_user_settings.xml
@@ -37,9 +37,18 @@
         android:gravity="center"
         android:layout_weight="1" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/location_text"
+        android:text=""/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:id="@+id/padding"
+        android:orientation="vertical"
         android:layout_weight="1"/>
 
 </LinearLayout>
