--- a/FindersKeepers/app/src/main/res/layout/content_home_page.xml
+++ b/FindersKeepers/app/src/main/res/layout/content_home_page.xml
@@ -54,28 +54,11 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="horizontal" >
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@mipmap/bike"
-                android:id="@+id/item1"
-                android:adjustViewBounds="true"
-                android:scaleType="fitCenter"/>
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@mipmap/bike"
-                android:id="@+id/item2"
-                android:adjustViewBounds="true"
-                android:scaleType="fitCenter"/>
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@mipmap/bike"
-                android:id="@+id/item3"
-                android:adjustViewBounds="true"
-                android:scaleType="fitCenter"/>
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:id="@+id/item_list">
+
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
