--- a/FindersKeepers/app/src/main/res/menu/menu_user_settings_activity.xml
+++ b/FindersKeepers/app/src/main/res/menu/menu_user_settings_activity.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="cse403.finderskeepers.UserSettingsActivity">
+    tools:context="cse403.finderskeepers.HomePage">
     <item
         android:title="@string/action_user_page"
         android:orderInCategory="101"
@@ -13,4 +13,8 @@
         android:id="@+id/action_view_trades"
         android:orderInCategory="201"
         android:title="@string/action_view_trades" />
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="302"
+        android:title="@string/action_settings" />
 </menu>
