Added Browse Item, View User Page, View Other User Item, and Propose Trade Views

--- a/FindersKeepers/app/src/main/res/menu/menu_home_page.xml
+++ b/FindersKeepers/app/src/main/res/menu/menu_home_page.xml
@@ -6,9 +6,9 @@
         android:orderInCategory="101"
         android:id="@+id/action_user_page" />
     <item
-        android:id="@+id/action_browse_items"
+        android:id="@+id/action_browse_users"
         android:orderInCategory="200"
-        android:title="@string/action_browse_items" />
+        android:title="@string/action_browse_users" />
     <item
         android:id="@+id/action_view_trades"
         android:orderInCategory="201"
