--- a/FindersKeepers/app/src/main/res/layout/content_view_trades.xml
+++ b/FindersKeepers/app/src/main/res/layout/content_view_trades.xml
@@ -91,4 +91,29 @@
         </LinearLayout>
     </HorizontalScrollView>
 
+    <com.beardedhen.androidbootstrap.AwesomeTextView
+        android:text="@string/rejected_trades_text"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:textSize="30sp"
+        android:textColor="@color/bootstrap_brand_secondary_text"
+        android:layout_gravity="center"
+        android:layout_weight=".75"/>
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/rejected_trades_view"
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:id="@+id/rejected_trades_list">
+        </LinearLayout>
+    </HorizontalScrollView>
+
 </LinearLayout>
