--- a/FindersKeepers/app/src/main/res/layout/content_view_user_trade.xml
+++ b/FindersKeepers/app/src/main/res/layout/content_view_user_trade.xml
@@ -19,7 +19,7 @@
         android:layout_height="0dp"
         android:layout_weight=".5"
         android:textSize="30sp"
-        android:text="@string/trade_initiator_text"
+        android:text="@string/trade_status_text"
         android:gravity="center"/>
 
     <TextView
@@ -27,9 +27,16 @@
         android:layout_height="0dp"
         android:layout_weight=".5"
         android:textSize="30sp"
-        android:id="@+id/initiator_string"
-        android:text="@string/initiator_placeholder"
+        android:id="@+id/status_string"
+        android:text="@string/status_placeholder"
         android:gravity="center"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:text="@string/view_other_text"
+        android:id="@+id/view_profile"
+        android:layout_weight=".5"/>
 
     <TextView
         android:layout_width="match_parent"
