--- a/FindersKeepers/app/src/main/res/layout/content_additem_page.xml
+++ b/FindersKeepers/app/src/main/res/layout/content_additem_page.xml
@@ -18,7 +18,7 @@
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:src="@drawable/ic_control_point_black_24dp"
+        android:src="@drawable/gray_plus"
         android:id="@+id/add_item_img"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
