--- a/FindersKeepers/app/src/main/res/layout/content_home_page.xml
+++ b/FindersKeepers/app/src/main/res/layout/content_home_page.xml
@@ -18,12 +18,12 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         app:bootstrapBrand="primary"
-        app:hasBorder="true"
+        app:hasBorder="false"
         android:src="@mipmap/ic_launcher"
         android:id="@+id/user_avatar"
         android:gravity="top"
         android:layout_gravity="center"
-        android:layout_weight="1" />
+        android:layout_weight="2" />
 
     <com.beardedhen.androidbootstrap.AwesomeTextView
         android:text="@string/user_name"
@@ -43,7 +43,8 @@
         android:textSize="30sp"
         android:textColor="@color/bootstrap_brand_secondary_text"
         android:layout_gravity="start"
-        android:layout_weight=".5"/>
+        android:layout_weight=".5"
+        android:layout_marginTop="20sp"/>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
@@ -62,11 +63,11 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_control_point_black_24dp"
+                android:src="@drawable/gray_plus"
                 android:id="@+id/add_item"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
-                android:background="#FFFFFF"/>
+                android:background="#00000000"/>
         </LinearLayout>
     </HorizontalScrollView>
 
@@ -78,7 +79,8 @@
         android:textSize="30sp"
         android:textColor="@color/bootstrap_brand_secondary_text"
         android:layout_gravity="start"
-        android:layout_weight=".5"/>
+        android:layout_weight=".5"
+        android:layout_marginTop="20dp"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -94,6 +96,7 @@
         android:layout_height="0dp"
         android:text="@string/update_tags_text"
         android:id="@+id/update_tags"
-        android:layout_weight=".5"/>
+        android:layout_weight=".5"
+        android:layout_marginTop="20dp"/>
 
 </LinearLayout>
