--- a/FindersKeepers/app/src/main/res/layout/content_other_user_page.xml
+++ b/FindersKeepers/app/src/main/res/layout/content_other_user_page.xml
@@ -18,12 +18,12 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         app:bootstrapBrand="primary"
-        app:hasBorder="true"
+        app:hasBorder="false"
         android:src="@mipmap/ic_launcher"
         android:id="@+id/user_avatar"
         android:gravity="top"
         android:layout_gravity="center"
-        android:layout_weight="1" />
+        android:layout_weight="2" />
 
     <com.beardedhen.androidbootstrap.AwesomeTextView
         android:text="@string/user_name"
@@ -43,7 +43,8 @@
         android:textSize="30sp"
         android:textColor="@color/bootstrap_brand_secondary_text"
         android:layout_gravity="start"
-        android:layout_weight=".5"/>
+        android:layout_weight=".5"
+        android:layout_marginTop="20dp"/>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
@@ -69,7 +70,8 @@
         android:textSize="30sp"
         android:textColor="@color/bootstrap_brand_secondary_text"
         android:layout_gravity="start"
-        android:layout_weight=".5"/>
+        android:layout_weight=".5"
+        android:layout_marginTop="20dp"/>
 
     <TextView
         android:layout_width="match_parent"
