--- a/FindersKeepers/app/src/main/res/values/styles.xml
+++ b/FindersKeepers/app/src/main/res/values/styles.xml
@@ -6,6 +6,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:buttonStyle">@style/AppTheme.Button</item>
+        <item name="android:editTextStyle">@style/AppTheme.EditText</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textViewStyle">@style/AppTheme.TextView</item>
+        <item name="android:fontFamily">sans-serif-thin</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -17,4 +22,18 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.EditText" parent="android:style/Widget.EditText">
+        <item name="android:textColor">#AAAAAA</item>
+    </style>
+
+    <style name="AppTheme.TextView" parent="android:style/Widget.TextView">
+        <item name="android:textColor">#666666</item>
+    </style>
+
+    <style name="AppTheme.Button" parent="android:style/Widget.Button">
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
 </resources>
+
