--- a/FindersKeepers/app/src/main/res/layout/content_additem_page.xml
+++ b/FindersKeepers/app/src/main/res/layout/content_additem_page.xml
@@ -25,16 +25,6 @@
         android:background="#FFFFFF"
         android:layout_weight="2"/>
 
-    <com.beardedhen.androidbootstrap.AwesomeTextView
-        android:text="@string/tag_add"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:id="@+id/user_addtag_text"
-        android:textSize="30sp"
-        android:textColor="@color/bootstrap_brand_secondary_text"
-        android:layout_gravity="start"
-        android:layout_weight="1"/>
-
     <EditText
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -46,8 +36,8 @@
     <Button
         android:text="Add Item"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="5dp"
         android:id="@+id/upload_button"
-        android:layout_weight="1"/>
+        android:layout_weight=".5"/>
 
 </LinearLayout>
