--- a/FindersKeepers/app/src/main/res/layout/content_additem_page.xml
+++ b/FindersKeepers/app/src/main/res/layout/content_additem_page.xml
@@ -17,9 +17,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add an item"
+        android:text="Edit item"
         android:textSize="40dp"/>
-    
+
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="0dp"
