--- a/FindersKeepers/app/src/main/res/layout/content_home_page.xml
+++ b/FindersKeepers/app/src/main/res/layout/content_home_page.xml
@@ -23,27 +23,25 @@
         android:id="@+id/user_avatar"
         android:gravity="top"
         android:layout_gravity="center"
-        android:layout_weight="2" />
+        android:layout_weight="3" />
 
     <com.beardedhen.androidbootstrap.AwesomeTextView
         android:text="@string/user_name"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:id="@+id/user_name_text"
         android:textSize="30sp"
         android:textColor="@color/bootstrap_brand_secondary_text"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"/>
+        android:layout_gravity="center_horizontal"/>
 
     <com.beardedhen.androidbootstrap.AwesomeTextView
         android:text="@string/user_items_text"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:id="@+id/user_items_text"
         android:textSize="30sp"
         android:textColor="@color/bootstrap_brand_secondary_text"
         android:layout_gravity="start"
-        android:layout_weight="1"
         android:layout_marginTop="20sp"/>
 
     <HorizontalScrollView
@@ -74,22 +72,20 @@
     <com.beardedhen.androidbootstrap.AwesomeTextView
         android:text="@string/user_tags_text"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:id="@+id/user_tags_text"
         android:textSize="30sp"
         android:textColor="@color/bootstrap_brand_secondary_text"
         android:layout_gravity="start"
-        android:layout_weight="1"
         android:layout_marginTop="20dp"/>
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:inputType="textCapWords"
         android:hint="@string/wishlist_tags_hint"
         android:ems="10"
-        android:id="@+id/edit_tags"
-        android:layout_weight="1" />
+        android:id="@+id/edit_tags" />
 
     <Button
         android:layout_width="match_parent"
