--- a/FindersKeepers/app/src/main/res/layout/content_other_user_page.xml
+++ b/FindersKeepers/app/src/main/res/layout/content_other_user_page.xml
@@ -23,7 +23,7 @@
         android:id="@+id/user_avatar"
         android:gravity="top"
         android:layout_gravity="center"
-        android:layout_weight="2" />
+        android:layout_weight="4" />
 
     <com.beardedhen.androidbootstrap.AwesomeTextView
         android:text="@string/user_name"
@@ -33,7 +33,7 @@
         android:textSize="30sp"
         android:textColor="@color/bootstrap_brand_secondary_text"
         android:layout_gravity="center_horizontal"
-        android:layout_weight=".5"/>
+        android:layout_weight="1"/>
 
     <com.beardedhen.androidbootstrap.AwesomeTextView
         android:text="@string/other_user_items_text"
@@ -43,14 +43,14 @@
         android:textSize="30sp"
         android:textColor="@color/bootstrap_brand_secondary_text"
         android:layout_gravity="start"
-        android:layout_weight=".5"
+        android:layout_weight="1"
         android:layout_marginTop="20dp"/>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/user_items_view"
-        android:layout_weight="1">
+        android:layout_weight="2">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -70,7 +70,7 @@
         android:textSize="30sp"
         android:textColor="@color/bootstrap_brand_secondary_text"
         android:layout_gravity="start"
-        android:layout_weight=".5"
+        android:layout_weight="1"
         android:layout_marginTop="20dp"/>
 
     <TextView
@@ -78,13 +78,13 @@
         android:layout_height="0dp"
         android:ems="10"
         android:id="@+id/user_tags"
-        android:layout_weight=".5" />
+        android:layout_weight="1" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:text="@string/propose_trade_text"
         android:id="@+id/propose_trade"
-        android:layout_weight=".5"/>
+        android:layout_weight="1"/>
 
 </LinearLayout>
