--- a/FindersKeepers/app/src/main/res/layout/content_view_trades.xml
+++ b/FindersKeepers/app/src/main/res/layout/content_view_trades.xml
@@ -21,14 +21,14 @@
         android:textSize="30sp"
         android:textColor="@color/bootstrap_brand_secondary_text"
         android:layout_gravity="start"
-        android:layout_weight=".5"
+        android:layout_weight="1"
         android:gravity="center"/>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/incoming_trades_view"
-        android:layout_weight="1">
+        android:layout_weight="2">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -47,14 +47,14 @@
         android:textSize="30sp"
         android:textColor="@color/bootstrap_brand_secondary_text"
         android:layout_gravity="start"
-        android:layout_weight=".5"
+        android:layout_weight="1"
         android:gravity="center"/>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/outgoing_trades_view"
-        android:layout_weight="1">
+        android:layout_weight="2">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -73,13 +73,13 @@
         android:textSize="30sp"
         android:textColor="@color/bootstrap_brand_secondary_text"
         android:layout_gravity="center"
-        android:layout_weight=".75"/>
+        android:layout_weight="1"/>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/completed_trades_view"
-        android:layout_weight="1">
+        android:layout_weight="2">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -98,13 +98,13 @@
         android:textSize="30sp"
         android:textColor="@color/bootstrap_brand_secondary_text"
         android:layout_gravity="center"
-        android:layout_weight=".75"/>
+        android:layout_weight="1"/>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/rejected_trades_view"
-        android:layout_weight="1">
+        android:layout_weight="2">
 
         <LinearLayout
             android:layout_width="wrap_content"
