--- a/FindersKeepers/app/src/main/res/layout/content_propose_trade.xml
+++ b/FindersKeepers/app/src/main/res/layout/content_propose_trade.xml
@@ -1,119 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_propose_trade"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="70dp"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="cse403.finderskeepers.ProposeTradeActivity"
-    tools:showIn="@layout/activity_propose_trade">
-
-    <com.beardedhen.androidbootstrap.AwesomeTextView
-        android:text="@string/this_user_items_text"
-        android:layout_width="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/content_propose_trade"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/this_user_items_text"
-        android:textSize="30sp"
-        android:textColor="@color/bootstrap_brand_secondary_text"
-        android:layout_gravity="start"/>
+        android:orientation="vertical"
+        android:paddingBottom="70dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="70dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="cse403.finderskeepers.ProposeTradeActivity"
+        tools:showIn="@layout/activity_propose_trade">
 
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:id="@+id/this_user_item_view">
-
-        <LinearLayout
+        <com.beardedhen.androidbootstrap.AwesomeTextView
+            android:text="@string/this_user_items_text"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:id="@+id/this_user_item_list">
-        </LinearLayout>
-    </HorizontalScrollView>
+            android:layout_height="wrap_content"
+            android:id="@+id/this_user_items_text"
+            android:textSize="30sp"
+            android:textColor="@color/bootstrap_brand_secondary_text"
+            android:layout_gravity="start"/>
 
-    <com.beardedhen.androidbootstrap.AwesomeTextView
-        android:text="@string/this_user_selected_items_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/this_user_selected_items_text"
-        android:textSize="30sp"
-        android:textColor="@color/bootstrap_brand_secondary_text"
-        android:layout_gravity="start"/>
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:id="@+id/this_user_item_view">
 
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:id="@+id/this_user_selected_item_view">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:id="@+id/this_user_item_list">
+            </LinearLayout>
+        </HorizontalScrollView>
 
-        <LinearLayout
+        <com.beardedhen.androidbootstrap.AwesomeTextView
+            android:text="@string/this_user_selected_items_text"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:id="@+id/this_user_selected_item_list">
-        </LinearLayout>
-    </HorizontalScrollView>
+            android:layout_height="wrap_content"
+            android:id="@+id/this_user_selected_items_text"
+            android:textSize="30sp"
+            android:textColor="@color/bootstrap_brand_secondary_text"
+            android:layout_gravity="start"/>
 
-    <com.beardedhen.androidbootstrap.AwesomeTextView
-        android:text="@string/their_items_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/their_items_text"
-        android:textSize="30sp"
-        android:textColor="@color/bootstrap_brand_secondary_text"
-        android:layout_gravity="start"/>
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:id="@+id/this_user_selected_item_view">
 
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:id="@+id/their_item_view">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:id="@+id/this_user_selected_item_list">
+            </LinearLayout>
+        </HorizontalScrollView>
 
-        <LinearLayout
+        <com.beardedhen.androidbootstrap.AwesomeTextView
+            android:text="@string/their_items_text"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:id="@+id/their_item_list">
-        </LinearLayout>
-    </HorizontalScrollView>
+            android:layout_height="wrap_content"
+            android:id="@+id/their_items_text"
+            android:textSize="30sp"
+            android:textColor="@color/bootstrap_brand_secondary_text"
+            android:layout_gravity="start"/>
 
-    <com.beardedhen.androidbootstrap.AwesomeTextView
-        android:text="@string/their_selected_items_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/their_selected_items_text"
-        android:textSize="30sp"
-        android:textColor="@color/bootstrap_brand_secondary_text"
-        android:layout_gravity="start"/>
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:id="@+id/their_item_view">
 
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:id="@+id/their_selected_item_view">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:id="@+id/their_item_list">
+            </LinearLayout>
+        </HorizontalScrollView>
 
-        <LinearLayout
+        <com.beardedhen.androidbootstrap.AwesomeTextView
+            android:text="@string/their_selected_items_text"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:id="@+id/their_selected_item_list">
-        </LinearLayout>
-    </HorizontalScrollView>
+            android:layout_height="wrap_content"
+            android:id="@+id/their_selected_items_text"
+            android:textSize="30sp"
+            android:textColor="@color/bootstrap_brand_secondary_text"
+            android:layout_gravity="start"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="60sp"
-        android:text="@string/send_trade_text"
-        android:id="@+id/send_trade"/>
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:id="@+id/their_selected_item_view">
 
-</LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:id="@+id/their_selected_item_list">
+            </LinearLayout>
+        </HorizontalScrollView>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="60sp"
+            android:text="@string/send_trade_text"
+            android:id="@+id/send_trade"/>
+    </LinearLayout>
+</ScrollView>
+
